force-app/main/default/objects/Account/fields/ABM_for_Metadata__c.field-meta.xml
<CustomField>
    <fullName>ABM_for_Metadata__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ABM for Metadata</label>
    <type>Checkbox</type>
</CustomField>