force-app/main/default/objects/Account/fields/ABM_Mutiny__c.field-meta.xml
<CustomField>
    <fullName>ABM_Mutiny__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box to trigger include into ABM campaign</inlineHelpText>
    <label>Add to Mutiny ABM</label>
    <type>Checkbox</type>
</CustomField>