force-app/main/default/objects/Account/fields/Account18__c.field-meta.xml
<CustomField>
    <fullName>Account18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account18</label>
    <type>Text</type>
</CustomField>