force-app/main/default/objects/Account/fields/Account_ARR__c.field-meta.xml
<CustomField>
    <fullName>Account_ARR__c</fullName>
    <inlineHelpText>Sum of Contract_ARR__c, Status = &apos;Activated&apos; (refreshed Nightly)</inlineHelpText>
    <label>Account ARR</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>