force-app/main/default/objects/Account/fields/Account_Classification__c.field-meta.xml
<CustomField>
    <fullName>Account_Classification__c</fullName>
    <description>Classifying accounts as A, B, or C based on ARR and User count</description>
    <inlineHelpText>HOOPLA Field - Classifying accounts as A, B, or C based on ARR and User count</inlineHelpText>
    <label>Account Classification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Account_Classification</valueSetName>
    </valueSet>
</CustomField>