force-app/main/default/objects/Account/fields/ACCOUNT_CLASSIFICATION_C__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_CLASSIFICATION_C__c</fullName>
    <label>ACCOUNT_CLASSIFICATION__C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>