force-app/main/default/objects/Account/fields/Account_Cleanup_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Cleanup_Status__c</fullName>
    <label>Account Cleanup Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not reviewed</fullName>
                <default>true</default>
                <label>Not reviewed</label>
            </value>
            <value>
                <fullName>In progress</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>