force-app/main/default/objects/Account/fields/ACCOUNT_HEALTH_C__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_HEALTH_C__c</fullName>
    <label>ACCOUNT_HEALTH__C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>