force-app/main/default/objects/Account/fields/Account_Manager_Calendar_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Calendar_Link__c</fullName>
    <label>Account Manager Calendar Link</label>
    <type>Url</type>
</CustomField>