force-app/main/default/objects/Account/fields/Account_MRR__c.field-meta.xml
<CustomField>
    <fullName>Account_MRR__c</fullName>
    <inlineHelpText>Sum of Contract_MRR__c, Status = &apos;Activated&apos; (refreshed Nightly)</inlineHelpText>
    <label>Account MRR</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>