force-app/main/default/objects/Account/fields/Account_Name_Formula__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Formula__c</fullName>
    <formula>IF(NOT(ISBLANK(ShippingStreet)),(Name &amp;&quot; [&quot;&amp; ShippingStreet  &amp;&quot; &quot;&amp; ShippingCity &amp;&quot; &quot;&amp; ShippingState&amp;&quot;]&quot;),
IF(NOT(ISBLANK( BillingStreet)),(Name &amp;&quot; [&quot;&amp;  BillingStreet  &amp;&quot; &quot;&amp;  BillingCity &amp;&quot; &quot;&amp;  BillingState&amp;&quot;]&quot;),
&quot;&quot;))</formula>
    <label>Account Name Formula</label>
    <type>Text</type>
</CustomField>