force-app/main/default/objects/Account/fields/Account_notes__c.field-meta.xml
<CustomField>
    <fullName>Account_notes__c</fullName>
    <label>Account notes</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>