force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <formula>IF( ISBLANK(ParentId) , AccountNum__c,

Parent.AccountNum__c  &amp;&quot;-&quot;&amp; AccountNum__c)</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>