force-app/main/default/objects/Account/fields/Account_Number_Auto__c.field-meta.xml
<CustomField>
    <fullName>Account_Number_Auto__c</fullName>
    <displayFormat>{YYYY}{MM}{DD}{000}</displayFormat>
    <label>Account Number (Auto)</label>
    <type>AutoNumber</type>
</CustomField>