force-app/main/default/objects/Account/fields/Account_Order_Clean__c.field-meta.xml
<CustomField>
    <fullName>Account_Order_Clean__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Order Clean</label>
    <type>Checkbox</type>
</CustomField>