force-app/main/default/objects/Account/fields/ACCOUNT_OWNER_C__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_OWNER_C__c</fullName>
    <inlineHelpText>Recurly Project - Historical owner</inlineHelpText>
    <label>ACCOUNT_OWNER_C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>