force-app/main/default/objects/Account/fields/Account_Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_URL__c</fullName>
    <formula>&quot;https://raydiant.lightning.force.com/lightning/r/Account/&quot; + ID__c  + &quot;/view&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Record URL</label>
    <type>Text</type>
</CustomField>