force-app/main/default/objects/Account/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <inlineHelpText>Primarily used by sales to indicate the status of an account as it relates to their future opporutinty</inlineHelpText>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disqualified</fullName>
            </value>
            <value>
                <fullName>Nurture</fullName>
            </value>
            <value>
                <fullName>Out of Business</fullName>
            </value>
            <value>
                <fullName>Qualified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>