force-app/main/default/objects/Account/fields/Account_Status_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Reason__c</fullName>
    <inlineHelpText>Use this field to give details on why an account status is selected, specficially needed for DQ accounts</inlineHelpText>
    <label>Account Status Reason</label>
    <type>TextArea</type>
</CustomField>