force-app/main/default/objects/Account/fields/Account_Subscription_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Subscription_Status__c</fullName>
    <formula>IF(CX_Product_Sum_from_Opps__c + EX_Product_Sum_from_Opp__c +  DX_Product_Sum_from_Opp__c + RX_Product_Sum_from_Opps__c &gt;0, &quot;ACTIVE SUBSCRIPTIONS&quot;, &quot;NO ACTIVE SUBSCRIPTIONS&quot;)</formula>
    <label>Account Subscription Status</label>
    <type>Text</type>
</CustomField>