force-app/main/default/objects/Account/fields/Account_Team_CSM__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Team CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>