force-app/main/default/objects/Account/fields/ACCOUNT_TYPE_C__c.field-meta.xml
<CustomField>
    <fullName>ACCOUNT_TYPE_C__c</fullName>
    <inlineHelpText>Recurly Historical Account Type</inlineHelpText>
    <label>ACCOUNT_TYPE_C</label>
    <length>255</length>
    <type>Text</type>
</CustomField>