force-app/main/default/objects/Account/fields/Account_URL__c.field-meta.xml
<CustomField>
    <fullName>Account_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://raydiant.lightning.force.com/lightning/r/Account/&quot;&amp;Id&amp;&quot;/view&quot;, &quot;https://raydiant.lightning.force.com/lightning/r/Account/&quot;&amp;Id&amp;&quot;/view&quot;)</formula>
    <label>Account URL</label>
    <type>Text</type>
</CustomField>