force-app/main/default/objects/Account/fields/Account_URL_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Account_URL_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;+ Id, Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account URL Hyperlink</label>
    <type>Text</type>
</CustomField>