force-app/main/default/objects/Account/fields/Account_Value__c.field-meta.xml
<CustomField>
    <fullName>Account_Value__c</fullName>
    <description>Sum of Subscription Monthly Value</description>
    <inlineHelpText>Sums &apos;Monthly Value&apos; on all active subscriptions</inlineHelpText>
    <label>Total MRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>