force-app/main/default/objects/Account/fields/Account_Webhook_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Webhook_Event_Type__c</fullName>
    <label>Account Webhook Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>new_account</fullName>
            </value>
            <value>
                <fullName>account_merge</fullName>
            </value>
            <value>
                <fullName>subscription_changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>