force-app/main/default/objects/Account/fields/Account_Webhook_Profile_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Webhook_Profile_Id__c</fullName>
    <label>Account Webhook Profile Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>