force-app/main/default/objects/Account/fields/Account_Webhook_Response__c.field-meta.xml
<CustomField>
    <fullName>Account_Webhook_Response__c</fullName>
    <label>Account Webhook Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>