force-app/main/default/objects/Account/fields/Account_Webhook_Sync_Time__c.field-meta.xml
<CustomField>
    <fullName>Account_Webhook_Sync_Time__c</fullName>
    <label>Account Webhook Sync Time</label>
    <type>DateTime</type>
</CustomField>