force-app/main/default/objects/Account/fields/accountCHrunreason__c.field-meta.xml
<CustomField>
    <fullName>accountCHrunreason__c</fullName>
    <label>Account Churn Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Global_Churn_Reason</valueSetName>
    </valueSet>
</CustomField>