force-app/main/default/objects/Account/fields/AccountManagemementOptOut__c.field-meta.xml
<CustomField>
    <fullName>AccountManagemementOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>From Customers</inlineHelpText>
    <label>Account Management Opt Out</label>
    <type>Checkbox</type>
</CustomField>