force-app/main/default/objects/Account/fields/AccountManagerCalendarLink__c.field-meta.xml
<CustomField>
    <fullName>AccountManagerCalendarLink__c</fullName>
    <label>Calendar Link</label>
    <type>Url</type>
</CustomField>