force-app/main/default/objects/Account/fields/AccountManagerEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountManagerEmail__c</fullName>
    <label>Account Manager Email</label>
    <type>Email</type>
</CustomField>