force-app/main/default/objects/Account/fields/AccountManagerName__c.field-meta.xml
<CustomField>
    <fullName>AccountManagerName__c</fullName>
    <label>Account Mgr Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>