force-app/main/default/objects/Account/fields/AccountNum__c.field-meta.xml
<CustomField>
    <fullName>AccountNum__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the account number calculation for this individual record.</inlineHelpText>
    <label>Local Account #</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>