force-app/main/default/objects/Account/fields/Activation_Complete__c.field-meta.xml
<CustomField>
    <fullName>Activation_Complete__c</fullName>
    <formula>Assets_Registered__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>True if &apos;Assets registered&apos; &gt;</inlineHelpText>
    <label>Device Activated?</label>
    <type>Checkbox</type>
</CustomField>