force-app/main/default/objects/Account/fields/Active_Contracts_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Active_Contracts_Rollup__c</fullName>
    <label>Contracts Active</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>