force-app/main/default/objects/Account/fields/Active_Departments__c.field-meta.xml
<CustomField>
    <fullName>Active_Departments__c</fullName>
    <label>Active Departments</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business Development</fullName>
            </value>
            <value>
                <fullName>Inside Sales</fullName>
            </value>
            <value>
                <fullName>Field Sales</fullName>
            </value>
            <value>
                <fullName>SMB Sales</fullName>
            </value>
            <value>
                <fullName>Mid-Market Sales</fullName>
            </value>
            <value>
                <fullName>Enterprise Sales</fullName>
            </value>
            <value>
                <fullName>Support</fullName>
            </value>
            <value>
                <fullName>Customer Service / Success</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>Engineering</fullName>
            </value>
            <value>
                <fullName>Human Resources</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>