force-app/main/default/objects/Account/fields/Active_Subs__c.field-meta.xml
<CustomField>
    <fullName>Active_Subs__c</fullName>
    <inlineHelpText>Raydiant Products only</inlineHelpText>
    <label>Active CB Subs</label>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.chargebeeapps__Subscription_status__c</field>
        <operation>equals</operation>
        <value>ACTIVE</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>chargebeeapps__CB_Subscription__c.Product_Line_Text__c</field>
        <operation>contains</operation>
        <value>Raydiant</value>
    </summaryFilterItems>
    <summaryForeignKey>chargebeeapps__CB_Subscription__c.chargebeeapps__Company__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>