force-app/main/default/objects/Account/fields/Ad_Source__c.field-meta.xml
<CustomField>
    <fullName>Ad_Source__c</fullName>
    <label>Ad Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>