force-app/main/default/objects/Account/fields/Add_to_Mutiny_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Mutiny_Picklist__c</fullName>
    <label>Add to Mutiny</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>