force-app/main/default/objects/Account/fields/AI_Product_Formula__c.field-meta.xml
<CustomField>
    <fullName>AI_Product_Formula__c</fullName>
    <formula>IF(AI_Product_Sum_from_Opps__c &gt; 0,&quot;AI&quot;,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AI Product Formula</label>
    <type>Text</type>
</CustomField>