force-app/main/default/objects/Account/fields/AI_Product_Sum_from_Opps__c.field-meta.xml
<CustomField>
    <fullName>AI_Product_Sum_from_Opps__c</fullName>
    <description>Sums the product count of AI from opps</description>
    <label>AI Product Sum from Opps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>