force-app/main/default/objects/Account/fields/Allbound_Dealer_Type__c.field-meta.xml
<CustomField>
    <fullName>Allbound_Dealer_Type__c</fullName>
    <label>Allbound Partner Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Affiliate</fullName>
            </value>
            <value>
                <fullName>Raydiant Dealer</fullName>
            </value>
            <value>
                <fullName>Distribution Dealer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>