force-app/main/default/objects/Account/fields/Annual_Subscription_Total__c.field-meta.xml
<CustomField>
    <fullName>Annual_Subscription_Total__c</fullName>
    <description>SUM of annual subscription net total, rolled up. Currently hidden from all layouts &amp; reports</description>
    <inlineHelpText>SUM of Monthly_Value__c F52_Active__c = TRUE AND Order_Line_Billing_Freq__c = &apos;Annual&apos;</inlineHelpText>
    <label>Active Monthly Value (Freq Annual)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>