force-app/main/default/objects/Account/fields/AR_Manager_Dunning_Approval__c.field-meta.xml
<CustomField>
    <fullName>AR_Manager_Dunning_Approval__c</fullName>
    <label>AR Manager Dunning Approval</label>
    <type>Date</type>
</CustomField>