force-app/main/default/objects/Account/fields/AR_Notes__c.field-meta.xml
<CustomField>
    <fullName>AR_Notes__c</fullName>
    <inlineHelpText>For the AR Dept Only.</inlineHelpText>
    <label>AR Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>