force-app/main/default/objects/Account/fields/AR_Owner__c.field-meta.xml
<CustomField>
    <fullName>AR_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>This is the AR specialist assigned to this account.</inlineHelpText>
    <label>AR Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>