force-app/main/default/objects/Account/fields/AR_Status__c.field-meta.xml
<CustomField>
    <fullName>AR_Status__c</fullName>
    <label>AR Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Good Standing</fullName>
                <default>true</default>
                <label>In Good Standing</label>
            </value>
            <value>
                <fullName>T-1 Warning</fullName>
            </value>
            <value>
                <fullName>T+1 Reminder</fullName>
            </value>
            <value>
                <fullName>Reminder Day 4</fullName>
            </value>
            <value>
                <fullName>Reminder Day 7</fullName>
            </value>
            <value>
                <fullName>Reminder Day 14</fullName>
            </value>
            <value>
                <fullName>Reminder Day 28</fullName>
            </value>
            <value>
                <fullName>Dunning Candidate</fullName>
            </value>
            <value>
                <fullName>DUNNING Requested</fullName>
            </value>
            <value>
                <fullName>Dunning Activated</fullName>
            </value>
            <value>
                <fullName>Screens Re-activated (un-dunned)</fullName>
            </value>
            <value>
                <fullName>Considering Collections</fullName>
            </value>
            <value>
                <fullName>In Collections</fullName>
            </value>
            <value>
                <fullName>Collected / Closed</fullName>
            </value>
            <value>
                <fullName>Reminder Day 12</fullName>
                <isActive>false</isActive>
                <label>Reminder Day 12</label>
            </value>
            <value>
                <fullName>Reminder Day 2</fullName>
                <isActive>false</isActive>
                <label>Reminder Day 2</label>
            </value>
            <value>
                <fullName>Reminder Day 25</fullName>
                <isActive>false</isActive>
                <label>Reminder Day 25</label>
            </value>
            <value>
                <fullName>T+15 Reminder</fullName>
                <isActive>false</isActive>
                <label>T+15 Reminder</label>
            </value>
            <value>
                <fullName>T+30 Reminder</fullName>
                <isActive>false</isActive>
                <label>T+30 Reminder</label>
            </value>
            <value>
                <fullName>T+45 Reminder</fullName>
                <isActive>false</isActive>
                <label>T+45 Reminder</label>
            </value>
            <value>
                <fullName>T+60 Reminder</fullName>
                <isActive>false</isActive>
                <label>T+60 Reminder</label>
            </value>
            <value>
                <fullName>T+75 Reminder</fullName>
                <isActive>false</isActive>
                <label>T+75 Reminder</label>
            </value>
            <value>
                <fullName>T-5 Reminder</fullName>
                <isActive>false</isActive>
                <label>T-5 Reminder</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>