force-app/main/default/objects/Account/fields/Assets_Registered__c.field-meta.xml
<CustomField>
    <fullName>Assets_Registered__c</fullName>
    <label>Assets Registered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>