force-app/main/default/objects/Account/fields/Assets_with_Heartbeats__c.field-meta.xml
<CustomField>
    <fullName>Assets_with_Heartbeats__c</fullName>
    <label>Assets with Heartbeats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>