force-app/main/default/objects/Account/fields/AssignmentID__c.field-meta.xml
<CustomField>
    <fullName>AssignmentID__c</fullName>
    <label>Assignment ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>