force-app/main/default/objects/Account/fields/Automatic_Industry_Coding_Raw__c.field-meta.xml
<CustomField>
    <fullName>Automatic_Industry_Coding_Raw__c</fullName>
    <label>Automatic Industry Coding Raw</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>