force-app/main/default/objects/Account/fields/AutomaticIndustryCodingTopValue__c.field-meta.xml
<CustomField>
    <fullName>AutomaticIndustryCodingTopValue__c</fullName>
    <label>Automatic Industry Coding Top Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>