force-app/main/default/objects/Account/fields/Autopay_Block__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Autopay Block</label>
    <type>Checkbox</type>
</CustomField>