force-app/main/default/objects/Account/fields/Autopay_Count__c.field-meta.xml
<CustomField>
    <fullName>Autopay_Count__c</fullName>
    <label>Autopay Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>