force-app/main/default/objects/Account/fields/AutopilotScore__c.field-meta.xml
<CustomField>
    <fullName>AutopilotScore__c</fullName>
    <label>Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>