force-app/main/default/objects/Account/fields/Average_Check_Price__c.field-meta.xml
<CustomField>
    <fullName>Average_Check_Price__c</fullName>
    <label>Average Check Price</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>$4-12+</fullName>
            </value>
            <value>
                <fullName>$6-15+</fullName>
            </value>
            <value>
                <fullName>$8-20+</fullName>
            </value>
            <value>
                <fullName>$10-30+</fullName>
            </value>
            <value>
                <fullName>$15-50+</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>