force-app/main/default/objects/Account/fields/Bill_To_Contact_First__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_First__c</fullName>
    <description>for Gaviti</description>
    <formula>blng__BillToContact__r.FirstName</formula>
    <inlineHelpText>for Gaviti</inlineHelpText>
    <label>Bill To Contact First</label>
    <type>Text</type>
</CustomField>