force-app/main/default/objects/Account/fields/Bill_To_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Id__c</fullName>
    <description>used w/ Send_with_Conga_Sign_Custom detail page button</description>
    <formula>blng__BillToContact__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill To Contact Id</label>
    <type>Text</type>
</CustomField>