force-app/main/default/objects/Account/fields/Bill_To_Contact_Last__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contact_Last__c</fullName>
    <description>for Gaviti</description>
    <formula>blng__BillToContact__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>for Gaviti</inlineHelpText>
    <label>Bill To Contact Last</label>
    <type>Text</type>
</CustomField>