force-app/main/default/objects/Account/fields/Bill_to_Contact_updated_by_Daily_Flow__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact_updated_by_Daily_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This gets checked by the flow &quot;Get bill to from Primary&quot; flow.  Every night this flow runs to correct any accounts MISSING bill to data.</inlineHelpText>
    <label>Bill to Contact updated by Daily Flow</label>
    <type>Checkbox</type>
</CustomField>