force-app/main/default/objects/Account/fields/Bill_to_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contacts__c</fullName>
    <description>Add contacts to send Invoice</description>
    <inlineHelpText>Add contacts to send Invoice</inlineHelpText>
    <label>Additional Bill to Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>