force-app/main/default/objects/Account/fields/Business_Segment_Rollup__c.field-meta.xml
<CustomField>
    <fullName>Business_Segment_Rollup__c</fullName>
    <description>Used in DLRS, Rolled up from closed won opps</description>
    <inlineHelpText>Rolled up from closed won opps</inlineHelpText>
    <label>Business Segment</label>
    <length>100</length>
    <type>Text</type>
</CustomField>