force-app/main/default/objects/Account/fields/Business_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Business_Use_Case__c</fullName>
    <label>Business Use Case</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Customer_Experience</fullName>
                <label>Customer Experience</label>
            </value>
            <value>
                <fullName>Employee_Experience</fullName>
                <label>Employee Experience</label>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>